test_suite/tests/ui/with-variant/skip_ser_whole_variant.stderr
error: variant `Unit` cannot have both #[serde(serialize_with)] and #[serde(skip_serializing)]
 --> tests/ui/with-variant/skip_ser_whole_variant.rs:5:5
  |
3 |   #[derive(Serialize)]
  |            --------- in this derive macro expansion
4 |   enum Enum {
5 | /     #[serde(serialize_with = "serialize_some_unit_variant")]
6 | |     #[serde(skip_serializing)]
7 | |     Unit,
  | |________^
  |
  = note: this error originates in the derive macro `Serialize` (in Nightly builds, run with -Z macro-backtrace for more info)
